new proj/src/objects/R_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE( MOD(  Meeting_Date__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_the_AE_foresee_a_technical_solution__c</fullName>
        <inlineHelpText>Does the AE foresee a technical solution that would require the early involvement of the Applied Technology Team?</inlineHelpText>
        <label>Does the AE foresee a technical solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_DP_Approval_Deal_Price__c</fullName>
        <label>Approval Deal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_DP_Lead_Platform__c</fullName>
        <formula>TEXT(Opportunity__r.GE_OG_DP_Ld_Pltfm__c)</formula>
        <label>Lead Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AEGenratrLd__c</fullName>
        <label>AE Generator lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AEMechLead__c</fullName>
        <label>AE Mechanical lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AETechPrpsl__c</fullName>
        <label>AE technical proposal completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AEThermLead__c</fullName>
        <label>AE Thermo lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AE_tec_Date__c</fullName>
        <label>AE technical proposal completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_AddInfo_Prp__c</fullName>
        <label>Any Additional Info needed for proposal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Add_Act__c</fullName>
        <label>Additional Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Addtnl_Risk__c</fullName>
        <label>Any Additional Risk not indentified ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Adtnl_Quote__c</fullName>
        <label>Additional Information Needed to Quote ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approved_Deal_Price__c</fullName>
        <inlineHelpText>This is the final approved price for the whole deal.</inlineHelpText>
        <label>Approved Deal Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approver_Attendee__c</fullName>
        <label>Attendees</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GE_ES_ApprvlReqs__c</fullName>
        <label>Certification/Approval Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Back_Ground__c</fullName>
        <label>Background</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_CMUWorkflow__c</fullName>
        <label>CM&amp;U Workflow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CMUWrkflw__c</fullName>
        <label>Initiate CM&amp;U Workflow Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CPM__c</fullName>
        <label>CPM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CSWrkDiscnt__c</fullName>
        <label>CS Extra Work Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Com_pr_Date__c</fullName>
        <label>Commercial proposal completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_CommPrpsal__c</fullName>
        <label>Commercial proposal completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comm_AddRisk__c</fullName>
        <label>Comment to Additional Risk :</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comm_Mgr__c</fullName>
        <label>Commercial Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comm_TCs__c</fullName>
        <label>Commercial T&amp;C&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>ES 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Negotiated Customer T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comm_T_C_s__c</fullName>
        <label>Commercial T&amp;C&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>ES 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Negotiated Customer T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comm_Terms__c</fullName>
        <label>Commercial Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA or MMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Study Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Compliance__c</fullName>
        <label>Complete Com Table of Compliance ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contact_Risk__c</fullName>
        <label>Contacts/Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cost_let_Date__c</fullName>
        <label>Cost letter completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_CstLtrCompd__c</fullName>
        <label>Cost letter completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cust_Budjet__c</fullName>
        <label>Does Customer have budget appropriated ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Discuss_TCs__c</fullName>
        <label>Discussed T&amp;C&apos;s?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_EHS_Attend__c</fullName>
        <label>EHS</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_EndUserCtry__c</fullName>
        <label>Any restriction on End User Country ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_End_User_Site__c</fullName>
        <formula>Opportunity__r.End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equip_Model__c</fullName>
        <formula>Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Equip_Model__c</formula>
        <label>Equip. Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equip_Name__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>GE S/N - Equip. Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_F_JCE_Date__c</fullName>
        <label>Field Services JCE completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Fin_Attend__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_GlobalSales__c</fullName>
        <label>Sales (including Global Sales)</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Go_Decision__c</fullName>
        <label>GO/No Go decision</label>
        <picklist>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred to CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred to R2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_HQR2Review__c</fullName>
        <label>HQ R2 Review Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_HQ_R2_Date__c</fullName>
        <label>HQ R2 Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_IBCustmrRef__c</fullName>
        <formula>Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Unit_Customer_Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ILESQtsCmpt__c</fullName>
        <label>ILES Quotes completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ILES_Q_Date__c</fullName>
        <label>ILES Quotes completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_ISTACPrpsal__c</fullName>
        <label>ISTAC proposal completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ISTAC_Date__c</fullName>
        <label>ISTAC proposal completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_In_CM_U_Due__c</fullName>
        <label>Initiate CM&amp;U Workflow Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Info_Prpsal__c</fullName>
        <label>Additional info needed for proposal ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Joint_Vent__c</fullName>
        <label>Joint Venture or Consortium required ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_L_5_R2_Date__c</fullName>
        <label>Level 5 R2 Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Lang_Transl__c</fullName>
        <label>Language Translation Requirements?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Legal_Atend__c</fullName>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_LinkToOppty__c</fullName>
        <label>Link to Opportunity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Lvl5R2Rview__c</fullName>
        <label>Level 5 R2 Review Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Meeting_Min__c</fullName>
        <label>Meeting Minutes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Met_R1_CTQs__c</fullName>
        <label>Met R1 CTQs ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Min_Quote__c</fullName>
        <label>Do we have minimum information to quote?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_MktAnalysis__c</fullName>
        <label>Market price analysis completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Mkt_P_Date__c</fullName>
        <label>Market price analysis completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Nameplate_SN__c</fullName>
        <formula>Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Nameplate_SN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nameplate SN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_NonStd_Ship__c</fullName>
        <label>Any Non-Standard Shipping Terms ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Non_Std_Pay__c</fullName>
        <label>Any Non-Standard Payment Terms ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Non_Std_Res__c</fullName>
        <label>Any Non-Standard resources Needed ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Nuclr_Plant__c</fullName>
        <label>Is this proposal for a Nuclear plant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opp_Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opp_Lead_PL__c</fullName>
        <formula>Opportunity__r.Lead_PL__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opp_Pipeline_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opp_Sales_Region__c</fullName>
        <formula>Opportunity__r.Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Number__c</fullName>
        <formula>Opportunity__r.GE_ES_Opportunity_Number__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Owner__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OtherComent__c</fullName>
        <label>Any other Comments ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Paymt_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PerfRiskltr__c</fullName>
        <label>Perf Risk letter completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Perf_Date__c</fullName>
        <label>Perf Risk letter completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Poten_Tech__c</fullName>
        <label>Potential technical challenges?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PreR1_Compl__c</fullName>
        <label>Pre-R1 for completeness:</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PricngAnlst__c</fullName>
        <label>Pricing Analyst</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Prod_Leader__c</fullName>
        <label>Product Line Leaders</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Projt_Mgmt__c</fullName>
        <label>Project Management</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PrpslFormat__c</fullName>
        <label>Proposal Format ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q_Type__c</fullName>
        <label>Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Proposal Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Term__c</fullName>
        <inlineHelpText>What will be the Commercial Terms and Conditions for this Proposal?</inlineHelpText>
        <label>What Terms we’ll be based our quote on ?</label>
        <picklist>
            <picklistValues>
                <fullName>ES 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Negotiated Customer T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_R1Chek_Name__c</fullName>
        <label>R1 Checklist Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_R2Call_Note__c</fullName>
        <label>R2 Call Notes :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_R2Chek_Name__c</fullName>
        <label>R2 Checklist Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_R2Pre_Date__c</fullName>
        <label>R2 Prep Call Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_R2PrepCall__c</fullName>
        <label>R2 Prep Call Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_RCT__c</fullName>
        <label>RCT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rating_Unit__c</fullName>
        <formula>TEXT(Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Rating_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rating__c</fullName>
        <formula>Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ref_Prev__c</fullName>
        <label>References to Any Previous Deals ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_RegR2_Date__c</fullName>
        <label>Region R2 Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_RepJCE_Date__c</fullName>
        <label>Repair Services JCE completed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_RgnR2Rev__c</fullName>
        <label>Region R2 Review Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_RprSrvsJCE__c</fullName>
        <label>Repair Services JCE completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Scope__c</fullName>
        <label>Scope</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Screen_Pts__c</fullName>
        <label>Discussed Screening Points?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Plan Not Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Plan Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Service_Mgr__c</fullName>
        <label>Service Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Services__c</fullName>
        <label>Services</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_Reqd__c</fullName>
        <label>Site Visit Required for Quoting ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Spl_Dlvry__c</fullName>
        <label>Any special delivery needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_SrcingAtten__c</fullName>
        <label>Sourcing</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_SrvsJCECmpt__c</fullName>
        <label>Field Services JCE completed Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_StationName__c</fullName>
        <formula>Opportunity__r.GE_ES_Installed_Base__r.GE_ES_Station_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Name</label>
        <type>Text</type>
    </fields>
</CustomObject>